2006-11-21  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/Makefile.am:
	* flumotion/component/misc/httpfile/file.py:
	* flumotion/component/misc/httpfile/httpfile.py:
	  Redesign httpfile. Pull more of static.File into our local copy.
	  Use a proper subclass instead of Evil Wrapper Hacks.

2006-11-21  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  Fewer typos. More workingness!

2006-11-21  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/base/http.py:
	  id is a builtin function. Python is my nemesisisis.
	* flumotion/component/consumers/httpstreamer/resources.py:
	  Don't do try/except; it was hiding the exception related to this
	  bug.

2006-11-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/depgraph.py:
	  Remove hungry-override of component moods, which results in
	  incorrect moods in manager being shown in admin clients.

2006-11-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/misc/httpfile/httpfile.py:
	  If stop() is called without start() having been called, don't
	  traceback due to self._pbclient not existing, or being None

	* flumotion/manager/depgraph.py:
	  Comment-only change.

2006-11-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Set setLogFilter, not non-existing addLogFilter, for streamer-wide
	  log filters (which we don't use, so this wouldn't have affected us).

2006-11-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/httpfile.py:
	  Have a description; needed for streamdata.

2006-11-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpfile/Makefile.am:
	Dist the glade file too.  Should fix the build really!

2006-11-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpfile/Makefile.am: